--- a/src/components/sae/saecss/member.css
+++ b/src/components/sae/saecss/member.css
@@ -1,6 +1,6 @@
-.member{
+/* .member{
     height: 250px;
-    width: 250px;
+    width: 260px;
     overflow: hidden;
     margin: 0 auto;
     border-radius: 50%;
@@ -14,7 +14,7 @@
     border-radius: 5px;
     box-shadow: 0px 1px 35px 0px rgba(0,0,0,0.3);
   }
-  .member .wrapper .image{
+  .image{
     position: relative;
     z-index: 20;
     border-radius: 50%;
@@ -82,7 +82,7 @@
     transition-delay: 0.4s;
   }
   .member .icons li a{
-    color: black;
+    color:white;
     height: 100%;
     width: 100%;
     border-radius: 50%;
@@ -93,4 +93,80 @@
   }
   .member .icons li a:hover{
     transform: scale(0.9);
-  }
+  } */
+  .card1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.img-container{
+    margin-bottom: -30px;
+    border-radius: 20px;
+    overflow: hidden;
+}
+
+.skewed{
+    width: 250px;
+    height: 320px;
+    margin: 50px 0 -50px 0;
+    border-radius: 30px;
+    transform: skewY(15deg);
+    overflow: hidden;
+}
+
+#img{
+    width: 100%;
+    height: 100%;
+    margin-top: -30px;
+    transform: skewY(-15deg);
+    background-image: url("https://images.unsplash.com/photo-1613483812364-896455b2b309?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80");
+    background-size: 100%;
+    background-position: center;
+    transition: all 0.3s ease;
+}
+
+#img:hover{
+    background-size: 110%;
+}
+
+.content1{
+    width: 300px;
+    height: 150px;
+    padding-top: 30px;
+    border-radius: 5px;
+    box-shadow:rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.content1 h3{
+    font-size: 25px;
+    color: #353535;
+}
+
+.content1 h5{
+    font-size: 16px;
+    
+    color: #353535;
+}
+
+.content1 .links{
+    width: 80%;
+   
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.content1 .links a{
+    color: red;
+    font-size: 30px;
+    
+    transition: all 0.3s ease;
+}
+
+.content1 .links i:hover{
+    transform: scale(1.2);
+}
