--- a/src/components/sae/saecss/member.css
+++ b/src/components/sae/saecss/member.css
@@ -1,99 +1,4 @@
-/* .member{
-    height: 250px;
-    width: 260px;
-    overflow: hidden;
-    margin: 0 auto;
-    border-radius: 50%;
-    transition: all 0.3s ease-in-out;
-    box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.3);
-    background: linear-gradient(135deg, red, black);
-  }
-  .member:hover{
-    height: 350px;
-    width: 350px;
-    border-radius: 5px;
-    box-shadow: 0px 1px 35px 0px rgba(0,0,0,0.3);
-  }
-  .image{
-    position: relative;
-    z-index: 20;
-    border-radius: 50%;
-    display: block;
-    height: 200px;
-    width: 200px;
-    border: 5px solid #fff;
-    object-fit: cover;
-    margin: 20px auto;
-    transition: all 0.3s ease;
-  }
-  .member:hover .wrapper img.active{
-    height: 470px;
-    width: 350px;
-    margin: 0px auto;
-    border: none;
-    border-radius: 5px;
-  }
-  .wrapper .title{
-    color: #fff;
-    font-size: 30px;
-    font-weight: 500;
-    padding: 10px;
-    line-height: 25px;
-  }
-  .wrapper .place{
-    color: #fff;
-    font-size: 17px;
-    line-height: 0px;
-    margin: 10px 0;
-  }
-  .content{
-    color: #fff;
-    font-size: 17px;
-    margin-top: 10px;
-    padding: 1px 20px 10px 20px!important;
-  }
- 
-  
-  .member .icons{
-    position: relative;
-    margin-top: -300px;
-    margin-left: 5px;
-    list-style: none;
-  }
-  .member .icons.active{
-    display: none;
-  }
-  .member .icons li{
-    height: 40px;
-    width: 40px;
-    margin: 5px 0;
-    opacity: 0;
-    margin-left: -100px;
-    transition: all 0.5s ease;
-  }
-  .member:hover .icons li{
-    opacity: 1;
-    margin-left: 7px;
-  }
-  .member:hover .icons li:nth-child(2){
-    transition-delay: 0.2s;
-  }
-  .member:hover .icons li:nth-child(3){
-    transition-delay: 0.4s;
-  }
-  .member .icons li a{
-    color:white;
-    height: 100%;
-    width: 100%;
-    border-radius: 50%;
-   
-    display: block;
-    line-height: 40px;
-    transition: all 0.3s;
-  }
-  .member .icons li a:hover{
-    transform: scale(0.9);
-  } */
+
   .card1{
     display: flex;
     flex-direction: column;
@@ -120,12 +25,23 @@
     height: 100%;
     margin-top: -30px;
     transform: skewY(-15deg);
-    background-image: url("https://images.unsplash.com/photo-1613483812364-896455b2b309?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80");
+    
     background-size: 100%;
     background-position: center;
     transition: all 0.3s ease;
 }
-
+.imgs{
+  
+  height: 400px;
+   width: 250px; 
+  background-size: 100%;
+  background-position: center;
+  transition: all 0.3s ease;
+}
+.imgs:hover{
+  height: 420px;
+  width: 280px;
+}
 #img:hover{
     background-size: 110%;
 }
