--- a/src/components/baja/bajacss/about.css
+++ b/src/components/baja/bajacss/about.css
@@ -70,9 +70,19 @@
     margin-left: 0;
     text-align: center;
     color: white;
-    border: 7px solid #e9ecef;
+    border: 7px solid black;
     border-radius: 100%;
     background-color: #ffc800;
+  }
+  .timeline > li .timeline-image img{
+    left: 0;
+    width:100%;
+    height: 100%;
+    margin-left: 0;
+    text-align: center;
+    color: white;
+    border-radius: 100%;
+  
   }
   .timeline > li .timeline-image h4, .timeline > li .timeline-image .h4 {
     font-size: 10px;
