--- a/src/components/baja/bajacss/navbar.css
+++ b/src/components/baja/bajacss/navbar.css
@@ -19,7 +19,7 @@
     text-transform: uppercase;
   }
   #mainNav .navbar-brand img {
-    height: 1.5rem;
+    width: 4rem;
   }
   #mainNav .navbar-nav .nav-item .nav-link {
     font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -39,7 +39,7 @@
     background-color: transparent;
     background: none;
   }
-  @media (min-width: 992px) {
+  @media (min-width: 996px) {
     #mainNav {
       padding-top: 1.5rem;
       padding-bottom: 1.5rem;
@@ -52,7 +52,7 @@
       transition: font-size 0.3s ease-in-out;
     }
     #mainNav .navbar-brand img {
-      height: 2rem;
+      width: 5rem;
       transition: height 0.3s ease-in-out;
     }
     #mainNav.navbar-shrink {
@@ -65,7 +65,8 @@
     }
     #mainNav.navbar-shrink .navbar-brand svg,
   #mainNav.navbar-shrink .navbar-brand img {
-      height: 1.5rem;
+      
+      width: 1rem;
     }
     #mainNav .navbar-nav .nav-item {
       margin-right: 1rem;
