--- a/src/components/sae/saecss/navbar.css
+++ b/src/components/sae/saecss/navbar.css
@@ -7,6 +7,16 @@
     background-color: rgba(240, 1, 1, 1);
   }
 
+ .navbar-toggler{
+   border: none !important;
+ }
+
+  .navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus {
+    outline: none;
+    box-shadow: none;
+}
 
 
 
