--- a/src/components/sae/saecss/Auditions.css
+++ b/src/components/sae/saecss/Auditions.css
@@ -1,27 +1,49 @@
+/* #overlay{
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 2;
+    cursor: pointer;
+} */
+@import url('https://fonts.googleapis.com/css?family=Poppins');
 .bg-image{
+    background-color: rgba(0, 0, 0, 0.8);
     height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
+    /* position : absolute; */
+    
 }
 .total{
-    padding-top: 130px;
+    padding-top: 80px;
+    font-family: 'Poppins';
+    /* min-height: 100%; */
 }
 .saeaudition{
 color: white;
 text-align: center;
 font-size: 25px;
 padding-left: 40px;
-padding-bottom: 20px;
+padding-bottom: 40px;
+
 }
 .bajaaudition{
 color:white;
 text-align: center;
 font-size: 25px;
+padding-bottom: 40px;
 
 
 }
 .audition_button{
+    /* font-family: 'Poppins'; */
     flex: 1 1 auto;
     margin: 10px;
     padding: 20px;
@@ -59,24 +81,28 @@ font-size: 25px;
 }
 .note1{
     color:white;
-    font-size: 17px;
+    /* font-family: 'Poppins'; */
+    font-size: 15px;
+    /* font-style: ; */
     padding-top: 30px;
     padding-bottom:30px ;
-    text-align: left;
+    text-align: center;
     padding-left: 20px;
     padding-right: 20px;
+    
 }
 .note2{
-    color:white;
-    font-size: 17px;
+    /* color:white;
+    font-family: 'Poppins'; */
+    font-size: 15px;
     padding-top: 30px;
     padding-bottom:30px ;
-    text-align: left;
+    text-align: center;
     padding-left: 20px;
     padding-right: 20px;
 }
 
-@media only screen and(max-width:970px)   {
+/* @media only screen and(max-width:970px)   {
     .saeaudition{
         
         font-size:20px;
@@ -91,6 +117,6 @@ font-size: 25px;
     .bajaaudition p {
         top: 30px;
         /* margin-top: 5%; */
-    }
     
-}
+    
+
